[gd_scene load_steps=22 format=2]

[ext_resource path="res://models/iroutest.glb" type="PackedScene" id=1]
[ext_resource path="res://models/g.material" type="Material" id=2]
[ext_resource path="res://models/b.material" type="Material" id=3]
[ext_resource path="res://models/dg.material" type="Material" id=4]
[ext_resource path="res://models/Material_000.material" type="Material" id=5]
[ext_resource path="res://models/Material_003.material" type="Material" id=6]
[ext_resource path="res://models/buuush.material" type="Material" id=7]
[ext_resource path="res://models/wood-bin.material" type="Material" id=8]
[ext_resource path="res://woodbinarea.gd" type="Script" id=9]
[ext_resource path="res://you.tscn" type="PackedScene" id=10]
[ext_resource path="res://hud.tscn" type="PackedScene" id=11]
[ext_resource path="res://pls.tscn" type="PackedScene" id=12]
[ext_resource path="res://indica1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Area.gd" type="Script" id=14]
[ext_resource path="res://Area2.gd" type="Script" id=15]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.41048, -0.00942504, -2.22405, -0.507615, -0.00942504, -2.31774, -0.41048, -0.00942504, -2.31774, -0.507615, -0.00942504, -2.22405, -1.2884, 0.90838, -2.22405, -1.19127, 0.90838, -2.31774, -1.2884, 0.90838, -2.31774, -1.19127, 0.90838, -2.22405, -1.19127, 0.868496, -2.22405, -0.507615, 0.868496, -2.31774, -1.19127, 0.868496, -2.31774, -0.507615, 0.868496, -2.22405, -1.19127, -0.00942504, -2.22405, -1.2884, -0.00942504, -2.31774, -1.19127, -0.00942504, -2.31774, -1.2884, -0.00942504, -2.22405, -0.507615, 0.868496, -2.22405, -1.19127, 0.429536, -2.22405, -0.507615, 0.429536, -2.22405, -1.19127, 0.868496, -2.22405, -1.19127, 0.868496, -3.9799, -0.507615, 0.429536, -3.9799, -1.19127, 0.429536, -3.9799, -0.507615, 0.868496, -3.9799, -1.19127, -0.00942504, -3.88621, -1.2884, -0.00942504, -3.9799, -1.19127, -0.00942504, -3.9799, -1.2884, -0.00942504, -3.88621, -1.19127, 0.868496, -3.88621, -0.507615, 0.868496, -3.9799, -1.19127, 0.868496, -3.9799, -0.507615, 0.868496, -3.88621, -1.19127, 0.868496, -3.88621, -1.19127, 0.520216, -2.31774, -1.19127, 0.520216, -3.88621, -1.19127, 0.868496, -2.31774, -0.507615, 0.90838, -2.22405, -0.41048, 0.90838, -2.31774, -0.507615, 0.90838, -2.31774, -0.41048, 0.90838, -2.22405, -0.507615, 0.868496, -2.31774, -0.41048, 0.868496, -3.88621, -0.507615, 0.868496, -3.88621, -0.41048, 0.868496, -2.31774, -1.2884, 0.90838, -3.88621, -1.19127, 0.90838, -3.9799, -1.2884, 0.90838, -3.9799, -1.19127, 0.90838, -3.88621, -1.2884, 0.868496, -2.31774, -1.19127, 0.868496, -3.88621, -1.2884, 0.868496, -3.88621, -1.19127, 0.868496, -2.31774, -0.41048, -0.00942504, -3.88621, -0.507615, -0.00942504, -3.9799, -0.41048, -0.00942504, -3.9799, -0.507615, -0.00942504, -3.88621, -0.41048, 0.868496, -3.88621, -0.41048, 0.429536, -2.31774, -0.41048, 0.429536, -3.88621, -0.41048, 0.868496, -2.31774, -1.2884, 0.868496, -2.31774, -1.2884, 0.429536, -3.88621, -1.2884, 0.429536, -2.31774, -1.2884, 0.868496, -3.88621, -1.19127, 0.868496, -2.31774, -0.507615, 0.520216, -2.31774, -1.19127, 0.520216, -2.31774, -0.507615, 0.868496, -2.31774, -0.507615, 0.868496, -3.88621, -1.19127, 0.520216, -3.88621, -0.507615, 0.520216, -3.88621, -1.19127, 0.868496, -3.88621, -0.507615, 0.868496, -2.31774, -0.507615, 0.520216, -3.88621, -0.507615, 0.520216, -2.31774, -0.507615, 0.868496, -3.88621, -1.19127, 0.520216, -2.31774, -0.507615, 0.520216, -3.88621, -1.19127, 0.520216, -3.88621, -0.507615, 0.520216, -2.31774, -0.41048, 0.90838, -2.31774, -0.41048, -0.00942504, -2.22405, -0.41048, -0.00942504, -2.31774, -0.41048, 0.90838, -2.22405, -0.41048, 0.90838, -2.22405, -0.507615, -0.00942504, -2.22405, -0.41048, -0.00942504, -2.22405, -0.507615, 0.90838, -2.22405, -1.19127, 0.90838, -3.9799, -1.19127, -0.00942504, -3.88621, -1.19127, -0.00942504, -3.9799, -1.19127, 0.90838, -3.88621, -1.2884, 0.90838, -2.22405, -1.2884, -0.00942504, -2.31774, -1.2884, -0.00942504, -2.22405, -1.2884, 0.90838, -2.31774, -0.507615, 0.90838, -3.88621, -0.507615, -0.00942504, -3.9799, -0.507615, -0.00942504, -3.88621, -0.507615, 0.90838, -3.9799, -0.507615, 0.90838, -3.9799, -0.41048, -0.00942504, -3.9799, -0.507615, -0.00942504, -3.9799, -0.41048, 0.90838, -3.9799, -1.19127, 0.90838, -3.88621, -1.2884, -0.00942504, -3.88621, -1.19127, -0.00942504, -3.88621, -1.2884, 0.90838, -3.88621, -0.41048, 0.90838, -3.88621, -0.507615, -0.00942504, -3.88621, -0.41048, -0.00942504, -3.88621, -0.507615, 0.90838, -3.88621, -1.2884, 0.90838, -3.88621, -1.2884, -0.00942504, -3.9799, -1.2884, -0.00942504, -3.88621, -1.2884, 0.90838, -3.9799, -1.2884, 0.90838, -2.31774, -1.19127, -0.00942504, -2.31774, -1.2884, -0.00942504, -2.31774, -1.19127, 0.90838, -2.31774, -1.2884, 0.90838, -3.9799, -1.19127, -0.00942504, -3.9799, -1.2884, -0.00942504, -3.9799, -1.19127, 0.90838, -3.9799, -0.507615, 0.90838, -2.31774, -0.41048, -0.00942504, -2.31774, -0.507615, -0.00942504, -2.31774, -0.41048, 0.90838, -2.31774, -1.19127, 0.90838, -2.31774, -1.19127, -0.00942504, -2.22405, -1.19127, -0.00942504, -2.31774, -1.19127, 0.90838, -2.22405, -0.41048, 0.90838, -3.9799, -0.41048, -0.00942504, -3.88621, -0.41048, -0.00942504, -3.9799, -0.41048, 0.90838, -3.88621, -0.507615, 0.90838, -2.22405, -0.507615, -0.00942504, -2.31774, -0.507615, -0.00942504, -2.22405, -0.507615, 0.90838, -2.31774, -1.19127, 0.90838, -2.22405, -1.2884, -0.00942504, -2.22405, -1.19127, -0.00942504, -2.22405, -1.2884, 0.90838, -2.22405, -0.507615, 0.90838, -3.88621, -0.41048, 0.90838, -3.9799, -0.507615, 0.90838, -3.9799, -0.41048, 0.90838, -3.88621 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 1.25665 )

[sub_resource type="CylinderShape" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[node name="iroutest" instance=ExtResource( 1 )]

[node name="Plane" parent="." index="0"]
material/0 = ExtResource( 2 )
material/1 = ExtResource( 3 )
material/2 = ExtResource( 4 )

[node name="Plane001" parent="." index="1"]
transform = Transform( 2.17067, 0, 0, 0, 1, 0, 0, 0, 6, 0.318, 0.001, -3 )

[node name="StaticBody" type="StaticBody" parent="Plane001" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Plane001/StaticBody" index="0"]
shape = SubResource( 1 )

[node name="Cylinder009" parent="trunk1" index="9"]
material/0 = ExtResource( 5 )

[node name="trunk1001" parent="." index="3"]
material/0 = ExtResource( 6 )

[node name="bush" parent="." index="4"]
material/0 = ExtResource( 7 )

[node name="Cube" parent="bush" index="0"]
transform = Transform( 0.172488, 0, 0, 0, 0.172488, 0, 0, 0, 0.172488, 0, -1.24194, 0 )

[node name="Cube001" parent="bush001" index="0"]
transform = Transform( 0.172488, 0, 0, 0, 0.172488, 0, 0, 0, 0.172488, 0, -1.20097, 0 )

[node name="Cube002" parent="bush002" index="0"]
transform = Transform( 0.172488, 0, 0, 0, 0.172488, 0, 0, 0, 0.172488, 0, -1.0743, 0 )

[node name="woodbin" parent="." index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.330301, -0.000286483, -2.83656 )
material/0 = ExtResource( 8 )

[node name="StaticBody" type="StaticBody" parent="woodbin" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="woodbin/StaticBody" index="0"]
shape = SubResource( 2 )

[node name="woodbinarea" type="Area" parent="woodbin" index="1"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 9 )

[node name="pls" parent="woodbin/woodbinarea" index="0" instance=ExtResource( 12 )]
transform = Transform( 0.410682, 0, 0, 0, 1, 0, 0, 0, 0.410682, -0.844301, 0.504447, -3.06744 )

[node name="CollisionShape2" type="CollisionShape" parent="woodbin/woodbinarea" index="1"]
shape = SubResource( 2 )

[node name="treearea" type="Area" parent="woodbin" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.560601, 2.06871, 0, 1.40269 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2" type="CollisionShape" parent="woodbin/treearea" index="0"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="woodbin" index="3"]
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="woodbin/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10318, 0.839702, -3.04656 )
shape = SubResource( 3 )

[node name="indica1" parent="woodbin/Area" index="1" instance=ExtResource( 13 )]
transform = Transform( 0.193041, 0, 0.279673, 0, 0.339826, 0, -0.279673, 0, 0.193041, -1.02568, 1.56782, -2.99858 )
visible = false

[node name="Area2" type="Area" parent="woodbin" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.36223, 0.123255, 2.36326 )
script = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="woodbin/Area2" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.38039, 0.839702, -2.8822 )
shape = SubResource( 4 )

[node name="indica1" parent="woodbin/Area2" index="1" instance=ExtResource( 13 )]
transform = Transform( 0.217029, 0, -0.176532, 0, 0.279758, 0, 0.176532, 0, 0.217029, -1.76715, 0.581698, -2.15454 )
visible = false

[node name="you" parent="." index="10" instance=ExtResource( 10 )]
transform = Transform( 0.244137, 0, 0, 0, 0.244137, 0, 0, 0, 0.244137, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="." index="11"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.9583, -1.94294, 0, 1.00017 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="MeshInstance5" type="MeshInstance" parent="." index="12"]
transform = Transform( 1.77877, 0, 0, 0, 1, 0, 0, 0, 0.472336, 0.0530633, 0, 3.36474 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance5" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance5/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="MeshInstance6" type="MeshInstance" parent="." index="13"]
transform = Transform( 1.77877, 0, 0, 0, 1, 0, 0, 0, 0.472336, 0.0530633, 0, -9.38324 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance6" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance6/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="." index="14"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4.01798, -2.35485, 0, -5.07782 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance2" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance2/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="MeshInstance3" type="MeshInstance" parent="." index="15"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.87875, 2.0914, 0, -6.54934 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance3" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance3/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="MeshInstance4" type="MeshInstance" parent="." index="16"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 6.42052, 2.50867, 0, -3.39055 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance4" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance4/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="hud" parent="." index="17" instance=ExtResource( 11 )]

[node name="indica1" parent="." index="18" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37435, -2.27063 )

[connection signal="body_entered" from="woodbin/woodbinarea" to="woodbin/woodbinarea" method="_on_woodbinarea_body_entered"]
[connection signal="body_entered" from="woodbin/treearea" to="woodbin/woodbinarea" method="_on_treearea_body_entered"]
[connection signal="body_entered" from="woodbin/Area" to="woodbin/Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="woodbin/Area" to="woodbin/Area" method="_on_Area_body_exited"]
[connection signal="body_entered" from="woodbin/Area2" to="woodbin/Area2" method="_on_Area2_body_entered"]
[connection signal="body_exited" from="woodbin/Area2" to="woodbin/Area2" method="_on_Area2_body_exited"]
